--- a/shop_exchange/src/App.css
+++ b/shop_exchange/src/App.css
@@ -4,7 +4,7 @@
 
 
 body {
-  background-image: url('./images/beautiful-pink-spa-flower_23-2148290895_dimmed.jpg');
+  background-image: url('./images/beautiful-pink-spa-flower_23-2148290895_faded.jpg');
   background-size: cover;
   background-position-y: -140px;
   background-repeat: no-repeat;
@@ -71,7 +71,8 @@ body {
   text-align: center;
   width: 50%;
   margin: 0 auto;
-  padding: 10px
+  padding: 10px;
+  background-color: rgba(255,255,255,0.15);
 }
 
 .user-details h2 {
@@ -83,6 +84,7 @@ body {
   margin: 20px auto;
   display: flex;
   justify-content: space-between;
+  
 }
 
 .user-buttons button {
@@ -90,7 +92,8 @@ body {
   height: 50px;
   font-size: 1em;
   background: none;
-  border: 1px solid black
+  border: 1px solid black;
+  background-color: rgba(255,255,255,0.15);
 }
 
 .user-buttons button:hover {
@@ -104,7 +107,9 @@ body {
   width: 70%;
   border: solid black 1px;
   margin: 0 auto;
-  padding: 20px
+  padding: 20px;
+  background-color: rgba(255,255,255,0.15);
+
 }
 
 
